updated the text on the main homepage

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -15,10 +15,9 @@
         Find the scripts you need
       </h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-        asperiores eveniet vitae similique possimus voluptate, voluptates
-        officiis consequuntur consectetur maxime ratione aperiam odit harum
-        dicta temporibus illum alias sint error!
+        Welcome to Scriptomatic - one of the largest scripts library! Whether you are looking for an idea for your next blockbaster or already 
+        have a brilliant idea for one - look no further! Scriptomatic provides you an access to an extensive collection of high quality scripts as 
+        well as a platform to showcase your talent and publish your own scripts!
       </p>
     </div>
     <div class="column" id="login">
@@ -129,13 +128,11 @@
           <div class="media-content">
             <div class="content">
               <p>
-                <strong>John Smith</strong>
-                <small>@johnsmith</small>
-                <small>31m</small>
+                <strong>Emily Macias</strong>
+                <small>@emilymacias</small>
+                <small>28m</small>
                 <br />
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-                efficitur sit amet massa fringilla egestas. Nullam condimentum
-                luctus turpis.
+                "Awesome! Found just what I needed! Will definitely be coming back for more scripts ideas"
               </p>
             </div>
             <nav class="level is-mobile">
@@ -179,9 +176,7 @@
                 <small>@johnsmith</small>
                 <small>31m</small>
                 <br />
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-                efficitur sit amet massa fringilla egestas. Nullam condimentum
-                luctus turpis.
+                "Love this website! I found so many great ideas for my Cinema and Media Arts class final project. Highly recommended!"
               </p>
             </div>
             <nav class="level is-mobile">
@@ -221,13 +216,11 @@
           <div class="media-content">
             <div class="content">
               <p>
-                <strong>John Smith</strong>
-                <small>@johnsmith</small>
-                <small>31m</small>
+                <strong>Tilly Carver</strong>
+                <small>@tillycarver</small>
+                <small>15m</small>
                 <br />
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-                efficitur sit amet massa fringilla egestas. Nullam condimentum
-                luctus turpis.
+                "Wow! My scripts made over 50 sales! Thank you Scriptomatic!!"
               </p>
             </div>
             <nav class="level is-mobile">
@@ -267,13 +260,11 @@
           <div class="media-content">
             <div class="content">
               <p>
-                <strong>John Smith</strong>
-                <small>@johnsmith</small>
-                <small>31m</small>
+                <strong>Todd Weaver</strong>
+                <small>@toddweaver</small>
+                <small>25m</small>
                 <br />
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-                efficitur sit amet massa fringilla egestas. Nullam condimentum
-                luctus turpis.
+                "Best platform to find a script! You can search by keyword, author, or genre, which makes it so easy to find a perfect script!"
               </p>
             </div>
             <nav class="level is-mobile">
