--- a/views/partials/agent-purchased.handlebars
+++ b/views/partials/agent-purchased.handlebars
@@ -1,5 +1,5 @@
 {{! // Create a card for each posted script}}
-<div class="card mb-4" id="search-result" data-id={{id}}>
+<div class="card mb-4 search-result" data-id={{id}}>
   <div class="card-header">
     <p class="card-header-title">
       <span class="has-text-success">Writer:
