--- a/views/partials/writer-posted.handlebars
+++ b/views/partials/writer-posted.handlebars
@@ -1,5 +1,5 @@
 {{!-- // Create a card for each posted script with its status --}}
-<div class="card mb-4" id="search-result" data-id={{id}}>
+<div class="card mb-4 search-result" data-id={{id}}>
     <div class="card-header">
         <p class="card-header-title">
             {{#if (eq status "purchased") }}
