--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,12 +1,12 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="navbar-brand">
-        <a href="/">
-          <img src="../public/assets/logo.png" width="80" id="logo-img" />
-        </a>
-    </div>
+  <div class="navbar-brand">
+    <a href="/">
+      <img src="../public/assets/logo.png" width="80" id="logo-img" />
+    </a>
+  </div>
 </nav>
 <main class="container main-container">
-    <h1 class="column is-size-1 has-text-weight-bold pl-0" id="main-title">
+  <h1 class="column is-size-1 has-text-weight-bold pl-0" id="main-title">
     SCRIPTOMATIC
   </h1>
   <div class="columns is-multiline is-tablet">
@@ -15,8 +15,10 @@
         Find the scripts you need
       </h2>
       <p>
-        Welcome to Scriptomatic - one of the largest scripts library! Whether you are looking for an idea for your next blockbaster or already 
-        have a brilliant idea for one - look no further! Scriptomatic provides you an access to an extensive collection of high quality scripts as 
+        Welcome to Scriptomatic - one of the largest scripts library! Whether you are looking for an idea for your next
+        blockbaster or already
+        have a brilliant idea for one - look no further! Scriptomatic provides you an access to an extensive collection
+        of high quality scripts as
         well as a platform to showcase your talent and publish your own scripts!
       </p>
     </div>
@@ -26,12 +28,7 @@
         <div class="field">
           <label class="label">Email</label>
           <div class="control">
-            <input
-              class="input"
-              type="email"
-              name="emailAddress"
-              placeholder="e.g. email@example.com"
-            />
+            <input class="input" type="email" name="emailAddress" placeholder="e.g. email@example.com" />
           </div>
         </div>
 
@@ -62,46 +59,26 @@
         <div class="field">
           <label class="label">First Name</label>
           <div class="control">
-            <input
-              class="input"
-              type="text"
-              name="firstName"
-              placeholder="e.g. John"
-            />
+            <input class="input" type="text" name="firstName" placeholder="e.g. John" />
           </div>
         </div>
         <div class="field">
           <label class="label">Last Name</label>
           <div class="control">
-            <input
-              class="input"
-              type="text"
-              name="lastName"
-              placeholder="e.g. Doe"
-            />
+            <input class="input" type="text" name="lastName" placeholder="e.g. Doe" />
           </div>
         </div>
         <div class="field">
           <label class="label">Email</label>
           <div class="control">
-            <input
-              class="input"
-              type="email"
-              name="emailAddress"
-              placeholder="e.g. email@example.com"
-            />
+            <input class="input" type="email" name="emailAddress" placeholder="e.g. email@example.com" />
           </div>
         </div>
 
         <div class="field">
           <label class="label">Password</label>
           <div class="control">
-            <input
-              class="input"
-              type="password"
-              name="password"
-              placeholder="********"
-            />
+            <input class="input" type="password" name="password" placeholder="********" />
           </div>
         </div>
 
@@ -119,10 +96,7 @@
         <article class="media">
           <div class="media-left">
             <figure class="image is-64x64">
-              <img
-                src="https://bulma.io/images/placeholders/128x128.png"
-                alt="Image"
-              />
+              <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image" />
             </figure>
           </div>
           <div class="media-content">
@@ -163,10 +137,7 @@
         <article class="media">
           <div class="media-left">
             <figure class="image is-64x64">
-              <img
-                src="https://bulma.io/images/placeholders/128x128.png"
-                alt="Image"
-              />
+              <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image" />
             </figure>
           </div>
           <div class="media-content">
@@ -176,7 +147,8 @@
                 <small>@johnsmith</small>
                 <small>31m</small>
                 <br />
-                "Love this website! I found so many great ideas for my Cinema and Media Arts class final project. Highly recommended!"
+                "Love this website! I found so many great ideas for my Cinema and Media Arts class final project. Highly
+                recommended!"
               </p>
             </div>
             <nav class="level is-mobile">
@@ -207,10 +179,7 @@
         <article class="media">
           <div class="media-left">
             <figure class="image is-64x64">
-              <img
-                src="https://bulma.io/images/placeholders/128x128.png"
-                alt="Image"
-              />
+              <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image" />
             </figure>
           </div>
           <div class="media-content">
@@ -251,10 +220,7 @@
         <article class="media">
           <div class="media-left">
             <figure class="image is-64x64">
-              <img
-                src="https://bulma.io/images/placeholders/128x128.png"
-                alt="Image"
-              />
+              <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image" />
             </figure>
           </div>
           <div class="media-content">
@@ -264,7 +230,8 @@
                 <small>@toddweaver</small>
                 <small>25m</small>
                 <br />
-                "Best platform to find a script! You can search by keyword, author, or genre, which makes it so easy to find a perfect script!"
+                "Best platform to find a script! You can search by keyword, author, or genre, which makes it so easy to
+                find a perfect script!"
               </p>
             </div>
             <nav class="level is-mobile">
