--- a/views/writer-workspace.handlebars
+++ b/views/writer-workspace.handlebars
@@ -1,56 +1,42 @@
 {{> loggedin-nav}}
 
 <div class="columns is-mobile" id="main">
-    <main>
-  <div id="workspace">
-    <h1
-      class="is-size-2 is-size-4-mobile has-text-weight-bold pb-5 pl-5"
-      id="purchased-title"
-    >
-      Workspace
-    </h1>
-    
-    <div class="pl-5 pr-5 columns">
-      <div class="column is-one-third" id="draft-scripts">
-        {{#each scriptData as |script|}}
-            {{> draft-card}}
-        {{/each}}
-      </div>
-      <div class="column" id="view-script">
-        <form>
-          <div class="field">
-            <div class="control pb-1">
-              <input
-                class="input is-large"
-                type="text"
-                placeholder="Script title"
-                id="script-title"
-              />
+  {{> writer-menu}}
+
+  <main>
+    <div id="workspace">
+      <h1 class="is-size-2 is-size-4-mobile has-text-weight-bold pb-5 pl-5" id="purchased-title">
+        Workspace
+      </h1>
+
+      <div class="pl-5 pr-5 columns">
+        <div class="column is-one-third" id="draft-scripts">
+          {{#each scriptData as |script|}}
+          {{> draft-card}}
+          {{/each}}
+        </div>
+        <div class="column" id="view-script">
+          <form>
+            <div class="field">
+              <div class="control pb-1">
+                <input class="input is-large" type="text" placeholder="Script title" id="script-title" />
+              </div>
+              <div class="control pb-1">
+                <input class="input is-large" type="text" placeholder="Script description" id="script-description" />
+              </div>
+              <div class="control">
+                <textarea class="textarea is-large" placeholder="Script text" id="script-text"></textarea>
+              </div>
             </div>
-            <div class="control pb-1">
-              <input
-                class="input is-large"
-                type="text"
-                placeholder="Script description"
-                id="script-description"
-              />
-            </div>
-            <div class="control">
-              <textarea
-                class="textarea is-large"
-                placeholder="Script text"
-                id="script-text"
-              ></textarea>
-            </div>
-          </div>
-          <div class="fa-solid fa-plus fa-lg" id="create-button"></div>
-          {{!-- <div class="fa-solid fa-floppy-disk fa-lg" id="save-button" data-id={{scriptData.id}}></div> --}}
-        </form>
+            <div class="fa-solid fa-plus fa-lg" id="create-button"></div>
+            {{!-- <div class="fa-solid fa-floppy-disk fa-lg" id="save-button" data-id={{scriptData.id}}></div> --}}
+          </form>
+        </div>
       </div>
     </div>
-  </div>
-</main>
+  </main>
 
-<script type="application/x-javascript" src="js/draft-card.js"></script>
-{{!-- <script type="application/x-javascript" src="js/workspace.js"></script> --}}
-</div> 
+  <script type="application/x-javascript" src="js/draft-card.js"></script>
+  {{!--
+  <script type="application/x-javascript" src="js/workspace.js"></script> --}}
+</div>
