--- a/views/messages.handlebars
+++ b/views/messages.handlebars
@@ -1,5 +1,47 @@
 {{> loggedin-nav}}
-
 <div class="columns is-mobile" id="main">
-    <div>Messages content goes here</div>
+  {{#if (eq userRole "writer")}}
+  {{> writer-menu}}
+  {{else}}
+  {{> agent-menu}}
+  {{/if}}
+  <main class="column">
+    <div id="workspace">
+      <h1 class="title is-2 is-4-mobile has-text-weight-bold pb-5 pl-5" id="purchased-title">
+        Workspace
+      </h1>
+      <div class="columns">
+        <div class="column is-one-quarter" id="draft-scripts">
+          {{#each userData as |user|}}
+          {{> message-card}}
+          {{/each}}
+        </div>
+        <div class="column mr-4" id="view-script">
+          <form>
+            <div class="field">
+              <div class="control">
+                    <textarea class="textarea is-large" placeholder="View Messages Here" id="script-text"></textarea>
+              </div>
+              
+            </div>
+              <div class="field has-addons">
+                    <div class="control">
+                        <input class="input" type="text" placeholder="Type your message...">
+                    </div>
+                    <div class="control">
+                        <a class="button is-info">
+                            Submit
+                        </a>
+                    </div>
+                </div>
+            
+            
+          </form>
+        </div>
+      </div>
+    </div>
+  </main>
+  <script type="application/x-javascript" src="js/draft-card.js"></script>
+  {{!--
+  <script type="application/x-javascript" src="js/workspace.js"></script> --}}
 </div>
