removed link to js from messages

--- a/views/messages.handlebars
+++ b/views/messages.handlebars
@@ -41,7 +41,7 @@
       </div>
     </div>
   </main>
-  <script type="application/x-javascript" src="js/draft-card.js"></script>
+  {{!-- <script type="application/x-javascript" src="js/draft-card.js"></script> --}}
   {{!--
   <script type="application/x-javascript" src="js/workspace.js"></script> --}}
 </div>
