changed title to "messages"

--- a/views/messages.handlebars
+++ b/views/messages.handlebars
@@ -8,7 +8,7 @@
   <main class="column">
     <div id="workspace">
       <h1 class="title is-2 is-4-mobile has-text-weight-bold pb-5 pl-5" id="purchased-title">
-        Workspace
+        Messages
       </h1>
       <div class="columns">
         <div class="column is-one-quarter" id="draft-scripts">
