minor styling adjustments to messages

--- a/views/messages.handlebars
+++ b/views/messages.handlebars
@@ -6,7 +6,7 @@
   {{> agent-menu}}
   {{/if}}
   <main class="column">
-    <div id="workspace">
+    <div id="massages">
       <h1 class="title is-2 is-4-mobile has-text-weight-bold pb-5 pl-5" id="purchased-title">
         Messages
       </h1>
