Fixed workspace page layout, and javascript functionality & removed all unnecessary files

--- a/views/partials/writer-workspace.handlebars
+++ b/views/partials/writer-workspace.handlebars
@@ -1,4 +1,4 @@
-<div class="card" id="purchased-script">
+<div class="card draft-script mb-3">
     <header class="card-header">
         <p class="card-header-title">{{title}}</p>
     </header>
@@ -8,6 +8,6 @@
         </div>
     </div>
     <footer class="card-footer">
-        <button class="card-footer-item edit-button" data-id={{id}}>Edit</button>
+        <button class="card-footer-item button is-link edit-button" data-id={{id}}>Edit</button>
     </footer>
 </div>
