--- a/views/writer-workspace.handlebars
+++ b/views/writer-workspace.handlebars
@@ -3,40 +3,53 @@
 <div class="columns is-mobile" id="main">
   {{> writer-menu}}
 
-  <main>
+  <main class="column">
     <div id="workspace">
-      <h1 class="is-size-2 is-size-4-mobile has-text-weight-bold pb-5 pl-5" id="purchased-title">
+      <h1 class="title is-2 is-4-mobile has-text-weight-bold pb-5 pl-5" id="purchased-title">
         Workspace
       </h1>
 
-      <div class="pl-5 pr-5 columns">
-        <div class="column is-one-third" id="draft-scripts">
+      <div class="columns">
+        <div class="column is-one-quarter" id="draft-scripts">
           {{#each scriptData as |script|}}
-          {{> draft-card}}
+          {{> writer-workspace}}
           {{/each}}
         </div>
-        <div class="column" id="view-script">
+        <div class="column mr-4" id="view-script">
           <form>
             <div class="field">
-              <div class="control pb-1">
+              <div class="control">
                 <input class="input is-large" type="text" placeholder="Script title" id="script-title" />
               </div>
-              <div class="control pb-1">
+              <div class="control">
                 <input class="input is-large" type="text" placeholder="Script description" id="script-description" />
               </div>
               <div class="control">
                 <textarea class="textarea is-large" placeholder="Script text" id="script-text"></textarea>
               </div>
             </div>
-            <div class="fa-solid fa-plus fa-lg" id="create-button"></div>
-            {{!-- <div class="fa-solid fa-floppy-disk fa-lg" id="save-button" data-id={{scriptData.id}}></div> --}}
+            <div class="field is-grouped is-grouped-right">
+              <div class="control">
+                <button class="button is-success is-large has-text-light" id="publish-button"> 
+                Publish
+                </button>
+              </div>
+              <div class="control">
+                <button class="button is-link is-large has-text-light" id="save-button">
+                  Save<i class="fa fa-floppy-o ml-2"></i>
+                </button>
+              </div>
+              <div class="control">
+                <button class="button has-background-grey is-large has-text-light" id="new-button">
+                  New<i class="fa fa-plus ml-2"></i>
+                </button>
+              </div>
+            </div>
           </form>
         </div>
       </div>
     </div>
   </main>
 
-  <script type="application/x-javascript" src="js/draft-card.js"></script>
-  {{!--
-  <script type="application/x-javascript" src="js/workspace.js"></script> --}}
+  <script type="application/x-javascript" src="js/workspace.js"></script>
 </div>
