fixed seed data, changed model datatypes from STRING to TEXT, made form fields required

--- a/views/agent-browse.handlebars
+++ b/views/agent-browse.handlebars
@@ -9,7 +9,7 @@
             <form id="search-script">
                 <div class="field is-grouped">
                     <p class="control is-expanded">
-                        <input class="input search-bar" type="text" placeholder="Find a script" />
+                        <input class="input search-bar" type="text" placeholder="Find a script" required />
                     </p>
                     <p class="control">
                         <a class="button is-info search-button"> Search </a>
@@ -20,19 +20,19 @@
                     <label class="label">Search by:&nbsp;</label>
                     <div class="control is-expended">
                         <label class="radio">
-                            <input type="radio" name="answer" id="genre" />
+                            <input type="radio" name="answer" id="genre" required />
                             Genre
                         </label>
                     </div>
                     <div class="control">
                         <label class="radio">
-                            <input type="radio" name="answer" id="keyword" />
+                            <input type="radio" name="answer" id="keyword" required />
                             Keyword
                         </label>
                     </div>
                     <div class="control">
                         <label class="radio">
-                            <input type="radio" name="answer" id="author" checked />
+                            <input type="radio" name="answer" id="author" checked required />
                             Author
                         </label>
                     </div>
