--- a/views/writer-workspace.handlebars
+++ b/views/writer-workspace.handlebars
@@ -19,13 +19,13 @@
           <form>
             <div class="field">
               <div class="control">
-                <input class="input is-large" type="text" placeholder="Script title" id="script-title" />
+                <input class="input is-large" type="text" placeholder="Script title" id="script-title" required/>
               </div>
               <div class="control">
-                <input class="input is-large" type="text" placeholder="Script description" id="script-description" />
+                <input class="input is-large" type="text" placeholder="Script description" id="script-description" required/>
               </div>
               <div class="control">
-                <textarea class="textarea is-large" placeholder="Script text" id="script-text"></textarea>
+                <textarea class="textarea is-large" placeholder="Script text" id="script-text" required></textarea>
               </div>
             </div>
             <div class="field is-grouped is-grouped-right">
