--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -16,7 +16,7 @@
       </h2>
       <p>
         Welcome to Scriptomatic - one of the largest scripts library! Whether you are looking for an idea for your next
-        blockbaster or already
+        blockbuster or already
         have a brilliant idea for one - look no further! Scriptomatic provides you an access to an extensive collection
         of high quality scripts as
         well as a platform to showcase your talent and publish your own scripts!
