Fixed main-page styling and layout

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
-  <div class="navbar-brand">
+  <div class="navbar-brand p-3">
     <a href="/">
-      <img src="../public/assets/logo.png" width="80" id="logo-img" />
+      <img src="/assets/logo.png" width="80" id="logo-img" />
     </a>
   </div>
 </nav>
@@ -28,14 +28,14 @@
         <div class="field">
           <label class="label">Email</label>
           <div class="control">
-            <input class="input" type="email" name="emailAddress" placeholder="e.g. email@example.com" required/>
+            <input class="input" type="email" name="emailAddress" placeholder="e.g. email@example.com" required />
           </div>
         </div>
 
         <div class="field">
           <label class="label">Password</label>
           <div class="control">
-            <input class="input" type="password" name="password" placeholder="********" required/>
+            <input class="input" type="password" name="password" placeholder="********" required />
           </div>
         </div>
 
@@ -59,7 +59,7 @@
         <div class="field">
           <label class="label">First Name</label>
           <div class="control">
-            <input class="input" type="text" name="firstName" placeholder="e.g. John" required/>
+            <input class="input" type="text" name="firstName" placeholder="e.g. John" required />
           </div>
         </div>
         <div class="field">
@@ -71,7 +71,7 @@
         <div class="field">
           <label class="label">Email</label>
           <div class="control">
-            <input class="input" type="email" name="emailAddress" placeholder="e.g. email@example.com" required/>
+            <input class="input" type="email" name="emailAddress" placeholder="e.g. email@example.com" required />
           </div>
         </div>
 
@@ -91,170 +91,162 @@
     <div class="column is-full has-text-centered">
       <h1 class="is-size-3 pb-4">Customer testimonials</h1>
     </div>
-    <div class="column is-half">
-      <div class="box">
-        <article class="media">
-          <div class="media-left">
-            <figure class="image is-64x64">
-              <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image" />
-            </figure>
-          </div>
-          <div class="media-content">
-            <div class="content">
-              <p>
-                <strong>Emily Macias</strong>
-                <small>@emilymacias</small>
-                <small>28m</small>
-                <br />
-                "Awesome! Found just what I needed! Will definitely be coming back for more scripts ideas"
-              </p>
+    <div class="column is-half testimonial-column">
+      <div class="card">
+        <div class="card-content">
+          <div class="media">
+            <div class="media-left">
+              <figure class="image is-128x128">
+                <img src="/assets/scorsese.jpg" alt="Not Martin Scorsese">
+              </figure>
             </div>
-            <nav class="level is-mobile">
-              <div class="level-left">
-                <a class="level-item" aria-label="reply">
-                  <span class="icon is-small">
-                    <i class="fas fa-reply" aria-hidden="true"></i>
-                  </span>
-                </a>
-                <a class="level-item" aria-label="retweet">
-                  <span class="icon is-small">
-                    <i class="fas fa-retweet" aria-hidden="true"></i>
-                  </span>
-                </a>
-                <a class="level-item" aria-label="like">
-                  <span class="icon is-small">
-                    <i class="fas fa-heart" aria-hidden="true"></i>
-                  </span>
-                </a>
+            <div class="media-content">
+              <p class="title is-4">Not Martin Scorsese</p>
+              <p class="subtitle is-6">@notMartin</p>
+              <div class="content">
+                "Awesome! Found just what I needed! Will definitely be coming back for more scripts ideas"
               </div>
-            </nav>
+            </div>
           </div>
-        </article>
+          <nav class="level is-mobile">
+            <div class="level-right">
+              <a class="level-item" aria-label="reply">
+                <span class="icon is-small">
+                  <i class="fa fa-reply" aria-hidden="true"></i>
+                </span>
+              </a>
+              <a class="level-item" aria-label="retweet">
+                <span class="icon is-small">
+                  <i class="fa fa-retweet" aria-hidden="true"></i>
+                </span>
+              </a>
+              <a class="level-item" aria-label="like">
+                <span class="icon is-small">
+                  <i class="fa fa-heart" aria-hidden="true"></i>
+                </span>
+              </a>
+            </div>
+          </nav>
+        </div>
       </div>
     </div>
-    <div class="column is-half">
-      <div class="box">
-        <article class="media">
-          <div class="media-left">
-            <figure class="image is-64x64">
-              <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image" />
-            </figure>
-          </div>
-          <div class="media-content">
-            <div class="content">
-              <p>
-                <strong>John Smith</strong>
-                <small>@johnsmith</small>
-                <small>31m</small>
-                <br />
+    <div class="column is-half testimonial-column">
+      <div class="card">
+        <div class="card-content">
+          <div class="media">
+            <div class="media-left">
+              <figure class="image is-128x128">
+                <img src="/assets/nolan.jpg" alt="Not Christopher Nolan">
+              </figure>
+            </div>
+            <div class="media-content">
+              <p class="title is-4">Not Christopher Nolan</p>
+              <p class="subtitle is-6">@notNolan</p>
+              <div class="content">
                 "Love this website! I found so many great ideas for my Cinema and Media Arts class final project. Highly
                 recommended!"
-              </p>
-            </div>
-            <nav class="level is-mobile">
-              <div class="level-left">
-                <a class="level-item" aria-label="reply">
-                  <span class="icon is-small">
-                    <i class="fas fa-reply" aria-hidden="true"></i>
-                  </span>
-                </a>
-                <a class="level-item" aria-label="retweet">
-                  <span class="icon is-small">
-                    <i class="fas fa-retweet" aria-hidden="true"></i>
-                  </span>
-                </a>
-                <a class="level-item" aria-label="like">
-                  <span class="icon is-small">
-                    <i class="fas fa-heart" aria-hidden="true"></i>
-                  </span>
-                </a>
               </div>
-            </nav>
+            </div>
           </div>
-        </article>
+          <nav class="level is-mobile">
+            <div class="level-right">
+              <a class="level-item" aria-label="reply">
+                <span class="icon is-small">
+                  <i class="fa fa-reply" aria-hidden="true"></i>
+                </span>
+              </a>
+              <a class="level-item" aria-label="retweet">
+                <span class="icon is-small">
+                  <i class="fa fa-retweet" aria-hidden="true"></i>
+                </span>
+              </a>
+              <a class="level-item" aria-label="like">
+                <span class="icon is-small">
+                  <i class="fa fa-heart" aria-hidden="true"></i>
+                </span>
+              </a>
+            </div>
+          </nav>
+        </div>
       </div>
     </div>
-    <div class="column is-half">
-      <div class="box">
-        <article class="media">
-          <div class="media-left">
-            <figure class="image is-64x64">
-              <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image" />
-            </figure>
-          </div>
-          <div class="media-content">
-            <div class="content">
-              <p>
-                <strong>Tilly Carver</strong>
-                <small>@tillycarver</small>
-                <small>15m</small>
-                <br />
-                "Wow! My scripts made over 50 sales! Thank you Scriptomatic!!"
-              </p>
+    <div class="column is-half testimonial-column">
+      <div class="card">
+        <div class="card-content">
+          <div class="media">
+            <div class="media-left">
+              <figure class="image is-128x128">
+                <img src="/assets/spikelee.jpg" alt="Spike Lee">
+              </figure>
             </div>
-            <nav class="level is-mobile">
-              <div class="level-left">
-                <a class="level-item" aria-label="reply">
-                  <span class="icon is-small">
-                    <i class="fas fa-reply" aria-hidden="true"></i>
-                  </span>
-                </a>
-                <a class="level-item" aria-label="retweet">
-                  <span class="icon is-small">
-                    <i class="fas fa-retweet" aria-hidden="true"></i>
-                  </span>
-                </a>
-                <a class="level-item" aria-label="like">
-                  <span class="icon is-small">
-                    <i class="fas fa-heart" aria-hidden="true"></i>
-                  </span>
-                </a>
+            <div class="media-content">
+              <p class="title is-4">Not Spike Lee</p>
+              <p class="subtitle is-6">@notSpike</p>
+              <div class="content">
+                "Wow! My script was just purchased by a big movie studio! Thank you Scriptomatic!!"
               </div>
-            </nav>
+            </div>
           </div>
-        </article>
+          <nav class="level is-mobile">
+            <div class="level-right">
+              <a class="level-item" aria-label="reply">
+                <span class="icon is-small">
+                  <i class="fa fa-reply" aria-hidden="true"></i>
+                </span>
+              </a>
+              <a class="level-item" aria-label="retweet">
+                <span class="icon is-small">
+                  <i class="fa fa-retweet" aria-hidden="true"></i>
+                </span>
+              </a>
+              <a class="level-item" aria-label="like">
+                <span class="icon is-small">
+                  <i class="fa fa-heart" aria-hidden="true"></i>
+                </span>
+              </a>
+            </div>
+          </nav>
+        </div>
       </div>
     </div>
-    <div class="column is-half">
-      <div class="box">
-        <article class="media">
-          <div class="media-left">
-            <figure class="image is-64x64">
-              <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image" />
-            </figure>
-          </div>
-          <div class="media-content">
-            <div class="content">
-              <p>
-                <strong>Todd Weaver</strong>
-                <small>@toddweaver</small>
-                <small>25m</small>
-                <br />
+    <div class="column is-half testimonial-column">
+      <div class="card">
+        <div class="card-content">
+          <div class="media">
+            <div class="media-left">
+              <figure class="image is-128x128">
+                <img src="/assets/tarantino.jpg" alt="Not Quentin Tarantino">
+              </figure>
+            </div>
+            <div class="media-content">
+              <p class="title is-4">Not Quentin Tarantino</p>
+              <p class="subtitle is-6">@notTarantino</p>
+              <div class="content">
                 "Best platform to find a script! You can search by keyword, author, or genre, which makes it so easy to
                 find a perfect script!"
-              </p>
-            </div>
-            <nav class="level is-mobile">
-              <div class="level-left">
-                <a class="level-item" aria-label="reply">
-                  <span class="icon is-small">
-                    <i class="fas fa-reply" aria-hidden="true"></i>
-                  </span>
-                </a>
-                <a class="level-item" aria-label="retweet">
-                  <span class="icon is-small">
-                    <i class="fas fa-retweet" aria-hidden="true"></i>
-                  </span>
-                </a>
-                <a class="level-item" aria-label="like">
-                  <span class="icon is-small">
-                    <i class="fas fa-heart" aria-hidden="true"></i>
-                  </span>
-                </a>
               </div>
-            </nav>
+            </div>
           </div>
-        </article>
+          <nav class="level is-mobile">
+            <div class="level-right">
+              <a class="level-item" aria-label="reply">
+                <span class="icon is-small">
+                  <i class="fa fa-reply" aria-hidden="true"></i>
+                </span>
+              </a>
+              <a class="level-item" aria-label="retweet">
+                <span class="icon is-small">
+                  <i class="fa fa-retweet" aria-hidden="true"></i>
+                </span>
+              </a>
+              <a class="level-item" aria-label="like">
+                <span class="icon is-small">
+                  <i class="fa fa-heart" aria-hidden="true"></i>
+                </span>
+              </a>
+            </div>
+          </nav>
+        </div>
       </div>
     </div>
   </div>
