--- a/views/partials/loggedin-nav.handlebars
+++ b/views/partials/loggedin-nav.handlebars
@@ -1,7 +1,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
         <a href="/">
-            <img src="../../../assets/logo.png" width="80" id="logo-img" />
+            <img src="/assets/logo.png" width="80" id="logo-img" />
         </a>
 
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
