--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,6 @@
 
 .navbar {
     background-color: #BABFCD;
-    height: 10vh;
 }
 
 #logo, #logo-img {
@@ -21,6 +20,20 @@
     padding-top: 0.5rem;
     padding-left: 0.5rem;
 }
+
+#testimonials {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.testimonial-column {
+  display: flex;
+}
+
+.testimonial-column .card {
+  flex: 1;
+}
+
 
 
 #menu-sidebar {
@@ -58,6 +71,12 @@ body {
     color:  #565656;
     cursor: pointer;
     
+}
+
+.image img {
+    display: block;
+    height: 128px;
+    width: 128px;
 }
  
 
