Changed names of home routes

--- a/views/partials/agent-menu.handlebars
+++ b/views/partials/agent-menu.handlebars
@@ -2,9 +2,9 @@
     <aside class="menu">
         <ul class="menu-list">
             <li><a {{#if browse}}class="is-size-5 is-size-6-mobile is-active" {{else}}
-                    class="is-size-5 is-size-6-mobile" {{/if}} href="/browse">Browse</a></li>
+                    class="is-size-5 is-size-6-mobile" {{/if}} href="/agent/browse">Browse</a></li>
             <li><a {{#if purchased}}class="is-size-5 is-size-6-mobile is-active" {{else}}
-                    class="is-size-5 is-size-6-mobile" {{/if}} href="/scripts/agent">Purchased Scripts</a></li>
+                    class="is-size-5 is-size-6-mobile" {{/if}} href="/scripts/agent/purchased">Purchased Scripts</a></li>
 
             <li><a class="is-size-5 is-size-6-mobile" href="/messages">Messages</a></li>
         </ul>
