--- a/views/partials/writer-menu.handlebars
+++ b/views/partials/writer-menu.handlebars
@@ -2,8 +2,8 @@
     <aside class="menu">
         <ul class="menu-list">
             <li><a {{#if posted}}class="is-size-5 is-size-6-mobile is-active" {{else}}class="is-size-5 is-size-6-mobile"
-                    {{/if}} href="/scripts/writer">Posted Scripts</a></li>
-            <li><a class="is-size-5 is-size-6-mobile" href="/workspace">Workspace</a></li>
+                    {{/if}} href="/scripts/writer/posted">Posted Scripts</a></li>
+            <li><a class="is-size-5 is-size-6-mobile" href="/writer/workspace">Workspace</a></li>
             <li><a class="is-size-5 is-size-6-mobile" href="/messages">View Messages</a></li>
         </ul>
     </aside>
